# code-iq

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
code_iq/: __init__.py  __main__.py  main.py
code_iq/commands/: __init__.py  ai.py  chat.py  complete.py  document.py  enhance.py  review.py  scan.py  test.py
