[tool.poetry]
name = "code-iq"
version = "1.0.1"
description = "CodeIQ is an advanced AI-powered coding assistant designed to enhance developer productivity by providing intelligent code suggestions and natural language interactions."
authors = ["Yousef Abu Shanab <josephyousef249@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/youzarsiph/code-iq"
repository = "https://github.com/youzarsiph/code-iq"
packages = [{include = "code_iq"}]

[tool.poetry.dependencies]
python = "^3.10"
huggingface-hub = "^0.25.0"
typer = "^0.12.5"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
ruff = "^0.5.7"

[tool.poetry.scripts]
code-iq = "code_iq.main:code_iq"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
